istio/new/yaml/5-Fault-Injection/6-istio-gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: fleetman-gateway
  namespace: default
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp-original
  namespace: default
spec:
  selector:
    app: webapp
    version: original
  ports:
    - name: http
      port: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp-experimental
  namespace: default
spec:
  selector:
    app: webapp
    version: experimental
  ports:
    - name: http
      port: 80
  type: ClusterIP

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fleetman-webapp-routing
  namespace: default
spec:
  parentRefs:
    - name: fleetman-gateway
  hostnames:
    - "*"
  rules:
    - matches:
        - headers:
            - type: Exact
              name: my-header
              value: canary
      backendRefs:
        - name: fleetman-webapp-experimental
          port: 80
    - backendRefs:
        - name: fleetman-webapp-original
          port: 80
