istio/new/yaml/5-Fault-Injection/7-dark-release-rules-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-staff-service-safe
  namespace: default
spec:
  selector:
    app: staff-service
    version: safe
  ports:
    - name: http
      port: 8080
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-staff-service-risky
  namespace: default
spec:
  selector:
    app: staff-service
    version: risky
  ports:
    - name: http
      port: 8080
  type: ClusterIP

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fleetman-staff-service-routing
  namespace: default
spec:
  hostnames:
    - fleetman-staff-service.default.svc.cluster.local
  rules:
    - matches:
        - headers:
            - type: Exact
              name: x-my-header
              value: canary
      backendRefs:
        - name: fleetman-staff-service-risky
          port: 8080
    - backendRefs:
        - name: fleetman-staff-service-safe
          port: 8080
