istio/new/yaml/5-Fault-Injection/7-dark-release-rules.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: fleetman-staff-service
  namespace: default
spec:
  hosts:
    - fleetman-staff-service
  http:
    - match:
        - headers:
            x-my-header:
              exact: canary
      fault:
        abort:
          percentage:
            value: 100.0
          httpStatus: 418 # BE CAREFUL WITH INDENTATION!
      route:
        - destination:
            host: fleetman-staff-service
            subset: risky
    - route:
        - destination:
            host: fleetman-staff-service
            subset: safe
---
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  name: fleetman-staff-service
  namespace: default
spec:
  host: fleetman-staff-service
  subsets:
    - labels:
        version: safe
      name: safe
    - labels:
        version: risky
      name: risky
