istio/new/yaml/5-Fault-Injection/8-fault-injection.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: fleetman-vehicle-telemetry
  namespace: default
spec:
  hosts:
    - fleetman-vehicle-telemetry
  http:
    - fault:
        abort:
          httpStatus: 503
          percentage:
            value: 100
      route:
        - destination:
            host: fleetman-vehicle-telemetry
